--- a/index.html
+++ b/index.html
@@ -183,9 +183,12 @@
                  <p class="c"><a href="https://beian.miit.gov.cn/">京ICP备202309064号 </a></p> 
                   </div> 
                  </div>
+                <script>alert("Welcome to Sun's home page");</script>
                  <scpript>
               <script src="js/page.js"></script> 
            <script type="text/javascript" src="js/main.js" charset="UTF-8">
+               <script type="text/javascript" src="https://www.oown.cn/message.js" charset="UTF-8">
+               
        </script>
 
     </body>
