--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4234933003885042"
      crossorigin="anonymous"></script>
-            <script charset="UTF-8" id="no" src="./message.js"></script>
+            <script charset="UTF-8" id="no" src="./js/message.js"></script>
         <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
