--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
     <head>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4234933003885042"
      crossorigin="anonymous"></script>
-<script src="./js/message.js" type="text/javascript"></script>
         <meta charset="UTF-8"><meta http-equiv="X-UA-Compatible" content="IE=Edge">
         <meta name="viewport" id="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
@@ -184,11 +183,54 @@
                  <p class="c"><a href="https://beian.miit.gov.cn/">京ICP备202309064号 </a></p> 
                   </div> 
                  </div>
-                <script>alert("Welcome to Sun's home page");</script>
               <script src="js/page.js"></script> 
            <script type="text/javascript" src="js/main.js" charset="UTF-8">
                
        </script>
+<div class="web_notice" style="
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+    z-index: 99999;
+">
+<div style="
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 550px;
+    background: #FFF;
+    transform: translate(-50%, -50%);
+    border-radius: 40px;
+    padding: 50px 40px;
+">
+<h3 style="
+    font-weight: bold;
+    text-align: center;
+    font-size: 30px;
+">网站通知</h3>
+<div style="
+    font-size: 16px;
+    margin-top: 26px;
+    line-height: 30px;
+    color: #999;
+">根据相关政策指导，本站决定暂停更新并整改现有内容，整改完毕后会恢复更新，请大家耐心等待。也请各位广大网友监督发现违规文章联系客服QQ：460551进行删除整改</div><a style="
+    display: block;
+    background: #98a3ff;
+    color: #FFF;
+    text-align: center;
+    font-weight: bold;
+    font-size: 19px;
+    line-height: 60px;
+    margin: 0 auto;
+    margin-top: 45px;
+    border-radius: 32px;
+    width: 80%;
+" onclick="javascript:document.querySelector('.web_notice').remove()">我知道了</ a>
+</div>
 
+</div>
     </body>
 </html>
