--- a/index.html
+++ b/index.html
@@ -206,17 +206,13 @@
     border-radius: 40px;
     padding: 50px 40px;
 ">
-<h3 style="
-    font-weight: bold;
-    text-align: center;
-    font-size: 30px;
-">网站通知</h3>
+<h3 style="font-weight: bold; text-align: center; font-size: 30px;">网站通知</h3>
 <div style="
     font-size: 16px;
     margin-top: 26px;
     line-height: 30px;
     color: #999;
-">根据相关政策指导，本站决定暂停更新并整改现有内容，整改完毕后会恢复更新，请大家耐心等待。也请各位广大网友监督发现违规文章联系客服QQ：460551进行删除整改</div><a style="
+">本网站仅供参考和学习，请谨慎应用和核实相关内容。本站不承担任何法律责任，包括但不限于信息准确性、合法性、安全性以及因使用本站而产生的任何直接或间接损失。</div><a style="
     display: block;
     background: #98a3ff;
     color: #FFF;
