--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     border-radius: 40px;
     padding: 50px 40px;
 ">
-<h3 style="font-weight: bold; text-align: center; font-size: 30px;">网站通知</h3>
+<h3>网站通知</h3>
 <div style="
     font-size: 16px;
     margin-top: 26px;
