--- a/index.html
+++ b/index.html
@@ -127,18 +127,41 @@
           </div>
         </div>
       </a>
-      <a href="https://hot.sktie.cn/" target="_blank">
+      <a href="https://web.hot.sktie.cn/" target="_blank">
         <div class="item">
           <div class="bg" style="background-color: #0f88eb"></div>
           <div class="inner">
-          <i class="fa fa-thermometer-three-quarters"></i> <span>热榜</span></div>
+          <i class="fa fa-thermometer-three-quarters"></i> <span>最全热榜</span></div>
         </div>
       </a>
-      <a href="https://v.sktie.cn/" target="_blank">
+              <a href="https://hot.sktie.cn/" target="_blank">
+        <div class="item">
+          <div class="bg" style="background-color: #0f88eb"></div>
+          <div class="inner">
+          <i class="fa fa-thermometer-three-quarters"></i> <span>热榜1</span></div>
+        </div>
+      </a>
+      <a href="https://yjx.sktie.cn/" target="_blank">
         <div class="item">
           <div class="bg" style="background-color: #f09199"></div>
           <div class="inner">
-         <i class="fa fa-youtube-play"></i> <span>VIP视频解析</span>
+         <i class="fa fa-youtube-play"></i> <span>免费VIP视频解析</span>
+          </div>
+        </div>
+      </a>
+              <a href="https://jx.sktie.cn/" target="_blank">
+        <div class="item">
+          <div class="bg" style="background-color: #f09199"></div>
+          <div class="inner">
+         <i class="fa fa-youtube-play"></i> <span>免费VIP视频解析2</span>
+          </div>
+        </div>
+      </a>
+      <a href="https://analysis.sktie.cn/" target="_blank">
+        <div class="item">
+          <div class="bg" style="background-color: #f09199"></div>
+          <div class="inner">
+         <i class="fa fa-youtube-play"></i> <span>VIP视频计费解析</span>
           </div>
         </div>
       </a>
