--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         <div class="item">
           <div class="bg" style="background-color: #f09199"></div>
           <div class="inner">
-         <i class="fa fa-youtube-play"></i> <span>免费VIP视频解析</span>
+         <i class="fa fa-youtube-play"></i> <span>免费影视解析1</span>
           </div>
         </div>
       </a>
@@ -153,7 +153,7 @@
         <div class="item">
           <div class="bg" style="background-color: #f09199"></div>
           <div class="inner">
-         <i class="fa fa-youtube-play"></i> <span>免费VIP视频解析2</span>
+         <i class="fa fa-youtube-play"></i> <span>免费影视解析2</span>
           </div>
         </div>
       </a>
@@ -161,7 +161,7 @@
         <div class="item">
           <div class="bg" style="background-color: #f09199"></div>
           <div class="inner">
-         <i class="fa fa-youtube-play"></i> <span>VIP视频计费解析</span>
+         <i class="fa fa-youtube-play"></i> <span>影视计费解析</span>
           </div>
         </div>
       </a>
