--- a/index.html
+++ b/index.html
@@ -119,6 +119,14 @@
           </div>
         </div>
       </a>
+                    <a href="https://one.sktie.cn/" target="_blank">
+        <div class="item">
+          <div class="bg" style="background-color: #353535"></div>
+          <div class="inner">
+         <i class="fa fa-heartbeat"></i> <span>私人助手</span>
+          </div>
+        </div>
+      </a>
       <a href="https://api.sktie.cn/" target="_blank">
         <div class="item">
           <div class="bg" style="background-color: #28a9e0"></div>
@@ -173,6 +181,14 @@
           </div>
         </div>
       </a>
+                    <a href="https://music.sktie.cn/" target="_blank">
+        <div class="item">
+          <div class="bg" style="background-color: #353535"></div>
+          <div class="inner">
+         <i class="fa fa-heartbeat"></i> <span>云音乐</span>
+          </div>
+        </div>
+      </a>
       <a href="https://chat.sktie.cn/" target="_blank">
         <div class="item">
           <div class="bg" style="background-color: #353535"></div>
@@ -193,7 +209,7 @@
         <div class="item">
           <div class="bg" style="background-color: #b600ff"></div>
           <div class="inner">
-              <i class="fa fa-rocket"></i> <span>代挂</span>
+              <i class="fa fa-rocket"></i> <span>QQ代挂</span>
           </div>
         </div>
       </a>
