--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         <div class="item">
           <div class="bg" style="background-color: #353535"></div>
           <div class="inner">
-         <i class="fa fa-heartbeat"></i> <span>云音乐</span>
+         <i class="fa fa-music"></i> <span>云音乐</span>
           </div>
         </div>
       </a>
