--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="shortcut icon" type="image/x-icon" href="./favicon.png">
         <title>Sun官网</title>
         <meta name="description" content="人生中有些事你不竭尽所能去做，你永远不知道自己有多出色！">
-        <meta name="keywords" content="Sun网络,Sun网络科技,Sun源码网,独角兽网络,小程序源码,Sun小程序,Sun官网,Sun付费,Sun网络">
+        <meta name="keywords" content="Sun网络,Sun网络科技,Sun源码网,小程序源码,Sun小程序,Sun官网,Sun付费,Sun网络">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha512-SfTiTlX6kk+qitfevl/7LibUOeJWlt9rbyDn92a1DqWOw9vWG2MFoays0sgObmWazO5BQPiFucnnEAjpAB+/Sw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" type="text/css" href="css/1.css">
         <link rel="stylesheet" type="text/css" href="css/2.css">
